--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Prism.js para resaltado de sintaxis -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
     <!-- Script personalizado -->
-    <script src="./js/scripts.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
