--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 
             <!-- Ejemplo de fragmento de código -->
             <pre><code class="language-javascript">// Ejemplo de código JavaScript
-                function saludar() {
-                    console.log("Hola, mundo!");
-                }
-                saludar();
+function saludar() {
+    let nombre = "Alvaro";
+    console.log("Hola, " + nombre);
+}
+saludar();
             </code></pre>
         </div>
     </main>
